Ft 164489796 Added swagger documentation
