# swagger.yaml
@@ -782,7 +782,7 @@ paths:
             properties:
               stats:
                 type: 'String'
-              statsCont:
+              statsCount:
                 type: 'Integer'
         '400':
           description: No access token provided
@@ -828,7 +828,7 @@ paths:
             properties:
               stats:
                 type: 'String'
-              statsCont:
+              statsCount:
                 type: 'Integer'
         '400':
           description: No access token provided
@@ -837,3 +837,78 @@ paths:
             properties:
               error:
                 type: 'Object'
+  /api/users/:
+    # binds a127 app logic to a route
+    get:
+      description: List all users information
+      produces:
+        - application/json
+      responses:
+        '404':
+          description: Users not found
+          schema:
+            type: object
+            properties:
+              message:
+                type: 'Object'
+                example: 'Users not found'
+        '200':
+          description: List users
+          schema:
+            type: object
+            properties:
+              profiles:
+                type: 'Array'
+              profileCount:
+                type: 'Integer'
+        '400':
+          description: No access token provided
+          schema:
+            type: object
+            properties:
+              error:
+                type: 'String'
+  /api/users/{username}:
+    # binds a127 app logic to a route
+    get:
+      description: Get user information
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: username
+          description: Username identifies a user
+          required: true
+          type: string
+          example: kanaka
+      responses:
+        '400':
+          description: Username not provided
+          schema:
+            type: object
+            properties:
+              message:
+                type: 'Object'
+                example: 'Provide username'
+        '404':
+          description: User not found
+          schema:
+            type: object
+            properties:
+              message:
+                type: 'Object'
+                example: 'User not found'
+        '200':
+          description: Get user information
+          schema:
+            type: object
+            properties:
+              profile:
+                type: 'Object'
+        '400':
+          description: No access token provided
+          schema:
+            type: object
+            properties:
+              error:
+                type: 'String'
